Bug 418839 - Master branch of kactivitymanagerd fails to compile with master branch of Frameworks, and Qt 5.14 branch
Summary: Master branch of kactivitymanagerd fails to compile with master branch of Fra...
Status: RESOLVED FIXED
Alias: None
Product: kactivitymanagerd
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Ivan Čukić
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2020-03-14 00:53 UTC by bluescreenavenger
Modified: 2020-03-16 10:08 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description bluescreenavenger 2020-03-14 00:53:19 UTC
It's odd that this worked before with 5.14, and I can't figure out what exactly changed, but it seems that .toSet is no longer defined...


[ 77%] Built target kactivitymanagerd_plugin_runapplication
/srcbuild/kactivitymanagerd/src/service/Activities.cpp: In constructor ‘Activities::Private::Private(Activities*)’:
/srcbuild/kactivitymanagerd/src/service/Activities.cpp:109:70: error: ‘class QStringList’ has no member named ‘toSet’; did you mean ‘takeAt’?
         = mainConfig().readEntry("runningActivities", QStringList()).toSet();
                                                                      ^~~~~
                                                                      takeAt
/srcbuild/kactivitymanagerd/src/service/Activities.cpp:111:70: error: ‘class QStringList’ has no member named ‘toSet’; did you mean ‘takeAt’?
         = mainConfig().readEntry("stoppedActivities", QStringList()).toSet();
                                                                      ^~~~~
                                                                      takeAt
make[2]: *** [src/service/CMakeFiles/kactivitymanagerd.dir/build.make:191: src/service/CMakeFiles/kactivitymanagerd.dir/Activities.cpp.o] Error 1
make[1]: *** [CMakeFiles/Makefile2:411: src/service/CMakeFiles/kactivitymanagerd.dir/all] Error 2
Comment 1 bluescreenavenger 2020-03-14 21:58:47 UTC
I found out that this is because of the Deprecations being enabled by cmake with the existence of the .git folder.
Comment 2 Ivan Čukić 2020-03-16 10:08:39 UTC
Git commit a28972ffe1e7b602ce9539e37006e1d9f8be96bd by Ivan Čukić.
Committed on 16/03/2020 at 10:06.
Pushed by ivan into branch 'master'.

No need to use QSet for activity existence checking

Linear search beats binary on small data sets. Also,
toSet is now deprecated.

M  +2    -2    src/service/Activities.cpp

https://commits.kde.org/kactivitymanagerd/a28972ffe1e7b602ce9539e37006e1d9f8be96bd