No need to use QSet for activity existence checking

Linear search beats binary on small data sets. Also,
toSet is now deprecated.

BUG:418839